istio/deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      type: web
      app: nginx
  template:
    metadata:
      labels:
        type: web
        app: nginx
    spec:
      containers:
        - image: nginx:1.14-alpine
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: port
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      type: web
      app: tomcat
  template:
    metadata:
      labels:
        type: web
        app: tomcat
    spec:
      containers:
        - image: docker.io/kubeguide/tomcat-app:v1
          imagePullPolicy: IfNotPresent
          name: tomcat
          ports:
            - containerPort: 8080
              name: port
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: test
spec:
  ports:
    - name: port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    type: web
  sessionAffinity: None
  type: NodePort
