istio/mute.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: sidecar-injector
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio.io/rev: default
    operator.istio.io/component: Pilot
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.8.1
    release: istio
  name: istio-sidecar-injector
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRZmFBYVNqa09DaWw3SDBXTHRFeklPakFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJd01USXlNVEEzTlRjeE9Wb1hEVE13TVRJeApPVEEzTlRjeE9Wb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFQRHQ4bHV3YkJCVThpamxpQkVsRFhmY3ZkNzUyaVZidWx5Tm5vS2wKU3lKL2pFQitMUEx4VXppcFhhSy9XdWxhZ29xdFY3dk95K0t4Vmo1UjhOTm5ZYmM4anJnSUdBVTcwYTlxaVVvVApzbzByNmVZd3Z4Z1 [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: sidecar-injector.istio.com
  namespaceSelector:
    matchLabels:
      istio-injection: enabled
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
- admissionReviewVersions:
    - v1beta1
    - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRZmFBYVNqa09DaWw3SDBXTHRFeklPakFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJd01USXlNVEEzTlRjeE9Wb1hEVE13TVRJeApPVEEzTlRjeE9Wb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFQRHQ4bHV3YkJCVThpamxpQkVsRFhmY3ZkNzUyaVZidWx5Tm5vS2wKU3lKL2pFQitMUEx4VXppcFhhSy9XdWxhZ29xdFY3dk95K0t4Vmo1UjhOTm5ZYmM4anJnSUdBVTcwYTlxaVVvVApzbzByNmVZd3Z4Z1 [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: sidecar-injector.istio.io
  objectSelector:
    matchLabels:
      istio-injection: enabled
  reinvocationPolicy: Never
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      operations:
        - CREATE
      resources:
        - pods
      scope: '*'
  sideEffects: None
  timeoutSeconds: 30
